WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28029
Fix DOM Storage memory leak
https://bugs.webkit.org/show_bug.cgi?id=28029
Summary
Fix DOM Storage memory leak
Jeremy Orlow
Reported
2009-08-05 15:16:00 PDT
Created
attachment 34185
[details]
Patch v1 Forgot to use adoptRef in one place. This caused the = operator to increment the ref count when it should have just left it as is. The result of this was that StorageAreaImpl's were never being freed.
Attachments
Patch v1
(1.17 KB, patch)
2009-08-05 15:16 PDT
,
Jeremy Orlow
no flags
Details
Formatted Diff
Diff
Patch v1
(1.36 KB, patch)
2009-08-05 15:18 PDT
,
Jeremy Orlow
fishd
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Orlow
Comment 1
2009-08-05 15:18:11 PDT
Created
attachment 34187
[details]
Patch v1
Jeremy Orlow
Comment 2
2009-08-05 15:48:52 PDT
Sending WebCore/ChangeLog Sending WebCore/storage/StorageNamespaceImpl.cpp Transmitting file data .. Committed revision 46818.
http://trac.webkit.org/changeset/46818
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug