2009-08-05  Jeremy Orlow  <jorlow@chromium.org>

Fix DOM Storage memory leak
       https://bugs.webkit.org/show_bug.cgi?id=28029

       Forgot to use adoptRef in one place.  This caused the = operator to
       increment the ref count when it shouldn't have, so StorageAreaImpl's were
       never freed.

        * storage/StorageNamespaceImpl.cpp:
        (WebCore::StorageNamespaceImpl::storageArea):



Canonical link: https://commits.webkit.org/38424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46818 268f45cc-cd09-0410-ab3c-d52691b4dbfc